Add About Us section Tweak map image

--- a/index.html
+++ b/index.html
@@ -96,32 +96,80 @@
             </div>
         </div>
     </header>
-    <!-- Our Celebration Section -->
-    <section class="details">
+    <!-- About Us -->
+    <section class="about-us" id="about">
         <div class="floral-divider"></div>
         <div class="lang-en">
-            <h2>Our Celebration</h2>
-            <p>Join us for a magical beachfront celebration at Jardin del Mar in Cancún. We'll exchange vows as the
-                sun
-                sets over the Caribbean, followed by cocktails, dinner with live saxophone music, and dancing under
-                the
-                stars.</p>
-            <p>The evening will culminate with mariachis and tacos at 2am - a true Mexican fiesta!</p>
+            <h2>About Us</h2>
+            <p>From the hospital halls to the rhythm of jazz — Beatriz and Lucas might seem like an unlikely pair, but
+                their story has always danced to its own beat.</p>
+            <div class="about-cards">
+                <div class="about-card">
+                    <img src="assets/photos/bety-doctor.jpg" alt="Bety at work" />
+                    <h3>Beatriz</h3>
+                    <p>A dedicated doctor with a heart of gold (and nerves of steel). Beatriz is the calm in the storm,
+                        the first one to show up, and the last one dancing.</p>
+                </div>
+                <div class="about-card">
+                    <img src="assets/photos/lucas-sax.jpg" alt="Lucas playing saxophone" />
+                    <h3>Lucas</h3>
+                    <p>A saxophone wizard with a love for late-night jams and a good mezcal. Lucas brings the groove,
+                        the jokes, and just enough chaos to keep things fun.</p>
+                </div>
+            </div>
         </div>
+
         <div class="lang-es hidden">
-            <h2>Nuestra Celebración</h2>
-            <p>Acompáñanos en una celebración mágica frente al mar en Jardín del Mar en Cancún. Intercambiaremos
-                nuestros votos mientras el sol se pone sobre el Caribe, seguido de cócteles, cena con música de
-                saxofón
-                en vivo y baile bajo las estrellas.</p>
-            <p>¡La noche culminará con mariachis y tacos a las 2am - una verdadera fiesta mexicana!</p>
+            <h2>Sobre los Novios</h2>
+            <p>Desde los pasillos del hospital hasta los escenarios de jazz — Beatriz y Lucas pueden parecer opuestos,
+                pero su historia siempre ha seguido su propio ritmo.</p>
+            <div class="about-cards">
+                <div class="about-card">
+                    <img src="assets/about/bety-doctor.jpg" alt="Bety trabajando" />
+                    <h3>Beatriz</h3>
+                    <p>Una doctora dedicada con un corazón de oro (y nervios de acero). Beatriz es calma en el caos, la
+                        primera en llegar y la última en dejar de bailar.</p>
+                </div>
+                <div class="about-card">
+                    <img src="assets/about/lucas-sax.jpg" alt="Lucas tocando sax" />
+                    <h3>Lucas</h3>
+                    <p>Un dios del saxofón con pasión por las improvisaciones nocturnas y un buen mezcal. Lucas pone el
+                        ritmo, las risas y un toque de locura divertida.</p>
+                </div>
+            </div>
         </div>
+
         <div class="floral-divider floral-alt"></div>
     </section>
-    <!-- TODO: integrate these changes better into CSS and the overall structure -->
-    <div style="display:flex; justify-content:center;">
-        <img src="./assets/cancun-destination.png" style="width:100%; max-width:800px;" />
-    </div>
+
+    <!-- Our Celebration Section -->
+    <section class="details">
+        <!-- <div class="floral-divider"></div> -->
+        <div class="pair-left" style="flex:1; background:#fbfbfb4f; padding:0 1rem 0 1rem;">
+            <div class="lang-en">
+                <h2>Our Celebration</h2>
+                <p>Join us for a magical beachfront celebration at Jardin del Mar in Cancún. We'll exchange vows as the
+                    sun
+                    sets over the Caribbean, followed by cocktails, dinner with live saxophone music, and dancing under
+                    the
+                    stars.</p>
+                <p>The evening will culminate with mariachis and tacos at 2am - a true Mexican fiesta!</p>
+            </div>
+            <div class="lang-es hidden">
+                <h2>Nuestra Celebración</h2>
+                <p>Acompáñanos en una celebración mágica frente al mar en Jardín del Mar en Cancún. Intercambiaremos
+                    nuestros votos mientras el sol se pone sobre el Caribe, seguido de cócteles, cena con música de
+                    saxofón
+                    en vivo y baile bajo las estrellas.</p>
+                <p>¡La noche culminará con mariachis y tacos a las 2am - una verdadera fiesta mexicana!</p>
+            </div>
+        </div>
+        <!-- <div class="floral-divider floral-alt"></div> -->
+        <div class="pair-right" style="display:flex; justify-content:center; flex:1">
+            <img src="./assets/cancun-destination.png" style="width:100%; max-width:800px;" />
+        </div>
+
+    </section>
     <!-- Location & Accommodation Section -->
     <section class="location" id="location">
         <div class="lang-en">
