more consistent spacing

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     </section>
 
-    <!-- <div class="leaf-divider"></div> -->
+    <div class="leaf-divider"></div>
 
     <!-- Our Celebration Section -->
     <section class="details" id="location">
