--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
 
     <!-- Location & Accommodation Section -->
     <section class="location" id="location">
-        <div class="map-container">
+        <!-- <div class="map-container">
             <iframe allowfullscreen="" height="200px" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2380643.159976702!2d-87.2372621!3d20.9470756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f3!3m3!1m2!1s0x8f4e86bdd8a05967%3A0x194721cc2728ea1b!2sJard%C3%ADn%20del%20Mar!5e0!3m2!1sen!2sus!16s%2Fg%2F11c75m3fl3&amp;markers=color:red%7C20.9470756,-87.2372621&amp;zoom=15"
                 style="border: 0;" width="100%">
             </iframe>
-        </div>
+        </div> -->
         <div class="pair">
-            <div class="pair-left text-backdrop" style="border-radius: 0px;">
+            <div class="pair-left text-backdrop">
                 <div class="lang-en">
                     <!-- <div class="rounded"> -->
                     <h2>Ceremony &amp; Accommodations</h2>
@@ -216,7 +216,12 @@
                 </div>
             </div>
             <div class="pair-right">
-                <img src="./assets/beach-wedding-placeholder.png" />
+                <!-- <img src="./assets/beach-wedding-placeholder.png" /> -->
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d131743.08997774255!2d-87.24368906053684!3d21.105855069768847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e86bdd8a05967%3A0x194721cc2728ea1b!2sJard%C3%ADn%20del%20Mar!5e0!3m2!1sen!2sca!4v1746409448429!5m2!1sen!2sca"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+
             </div>
         </div>
         <div class="lang-en">
