--- a/index.html
+++ b/index.html
@@ -224,101 +224,126 @@
 
             </div>
         </div>
-        <div class="lang-en">
-            <div class="hotel-info">
-                <h3>Guest Accommodations</h3>
-                <p><strong>Emporio Cancún</strong><br />
-                    Blvd. Kukulcan Km 17, Zona Hotelera<br />
-                    Cancún, Quintana Roo 77500, Mexico</p>
-                <p>Room block code: LUCAS-BEATRIZ</p>
-                <!-- Transportation Options -->
-                <h4>Getting to Emporio Cancún</h4>
-                <div class="transport-options">
-                    <div class="transport-card">
-                        <h4><i class="fas fa-taxi"></i> Taxi</h4>
-                        <p>Official airport taxis cost approximately $50 USD for up to 4 passengers. Travel time:
-                            ~30
-                            minutes.</p>
-                    </div>
-                    <div class="transport-card">
-                        <h4><i class="fas fa-shuttle-van"></i> Hotel Shuttle</h4>
-                        <p>Emporio offers private transfers for $65 USD each way (reserve in advance).</p>
-                    </div>
-                    <div class="transport-card">
-                        <h4><i class="fas fa-car"></i> Rental Car</h4>
-                        <p>Major rental agencies available at airport. Parking available at hotel for $15 USD/day.
-                        </p>
-                    </div>
+        <div class="hotel-info">
+            <div class="pair">
+                <div class="pair-left">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d59593.416815009645!2d-86.86401840455598!3d21.00912401918747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x8f4c282dfa86787b%3A0x35bbe28e95d56333!2sHotel%20Emporio%20Canc%C3%BAn%20optional%20All-Inclusive%2C%20Blvd.%20Kukulc%C3%A1n%2C%20Retorno%20Gucumatz%20Km%2017%2C%20Segunda%20Etapa%2C%20Zona%20Hotelera%2C%2077500%20Canc%C3%BAn%2C%20Q.R.%2C%20Mexico!3m2!1d21.0731978!2d-86.77652979999999!4m5!1s0x8f4e86bdd8a05967%3A0x194721cc2728ea1b!2sJard%C3%ADn%20del%20Mar%2C%20Quintana%20Roo%2C%20Mexico!3m2!1d20.9469776!2d-86.8372895!5e0!3m2!1sen!2sca!4v1746496572187!5m2!1sen!2sca"
+                        width="600" height="450" style="border:0; min-height: max-content;" allowfullscreen=""
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <!-- Nearby Options -->
-                <div class="nearby-options">
-                    <h4>Alternative Accommodations Nearby:</h4>
-                    <div class="hotel-list">
-                        <div class="hotel-card">
-                            <h5>Hyatt Ziva Cancún</h5>
-                            <div class="hotel-distance">0.3 miles from venue</div>
-                            <p>All-inclusive luxury resort</p>
-                        </div>
-                        <div class="hotel-card">
-                            <h5>Marriott Cancún Resort</h5>
-                            <div class="hotel-distance">0.5 miles from venue</div>
-                            <p>Beachfront with spa facilities</p>
-                        </div>
-                        <div class="hotel-card">
-                            <h5>Airbnb Options</h5>
-                            <div class="hotel-distance">Various locations</div>
-                            <p>Many condos available in Hotel Zone</p>
-                        </div>
+                <div class="pair-right">
+                    <div class="lang-en">
+                        <h3>Guest Accommodations</h3>
+                        <p><strong>Emporio Cancún</strong><br />
+                            Blvd. Kukulcan Km 17, Zona Hotelera<br />
+                            Cancún, Quintana Roo 77500, Mexico</p>
+                    </div>
+                    <div class="lang-es hidden">
+                        <h3>Alojamiento para Invitados</h3>
+                        <p><strong>Emporio Cancún</strong><br />
+                            Blvd. Kukulcán Km 17, Zona Hotelera<br />
+                            Cancún, Quintana Roo 77500, México</p>
+                        <p>Código para reservar: LUCAS-BEATRIZ</p>
+                    </div>
+                    <p style="font-size: 30px; text-align:center;" ;>🪇🚌🏨</h2>
+                    <p class="lang-en">
+                        🏨 We’ll be staying at Emporio Cancún — our home base for the weekend!
+                        🚐 Transportation to the wedding and
+                        🍹 our Thursday icebreaker will happen here.
+                        You’re free to stay elsewhere, but we recommend Emporio for the full experience.
+                    </p>
+                    <p class="lang-es hidden">
+                        🏨 Estaremos en Emporio Cancún — ¡nuestro punto de reunión para todo el fin de semana!
+                        🚐 De aquí saldrá el transporte a la boda y
+                        🍹 también será la sede del rompehielo el jueves.
+                        Puedes quedarte en otro lugar, pero te recomendamos Emporio para vivir la experiencia
+                        completa.
+                    </p>
+                    <p>Room block code: LUCAS-BEATRIZ</p>
+                </div>
+            </div>
+        </div>
+        <div class="lang-en">
+            <!-- Transportation Options -->
+            <h4>Getting to Emporio Cancún</h4>
+            <div class="transport-options">
+                <div class="transport-card">
+                    <h4><i class="fas fa-taxi"></i> Taxi</h4>
+                    <p>Official airport taxis cost approximately $50 USD for up to 4 passengers. Travel time:
+                        ~30
+                        minutes.</p>
+                </div>
+                <div class="transport-card">
+                    <h4><i class="fas fa-shuttle-van"></i> Hotel Shuttle</h4>
+                    <p>Emporio offers private transfers for $65 USD each way (reserve in advance).</p>
+                </div>
+                <div class="transport-card">
+                    <h4><i class="fas fa-car"></i> Rental Car</h4>
+                    <p>Major rental agencies available at airport. Parking available at hotel for $15 USD/day.
+                    </p>
+                </div>
+            </div>
+            <!-- Nearby Options -->
+            <div class="nearby-options">
+                <h4>Alternative Accommodations Nearby:</h4>
+                <div class="hotel-list">
+                    <div class="hotel-card">
+                        <h5>Hyatt Ziva Cancún</h5>
+                        <div class="hotel-distance">0.3 miles from venue</div>
+                        <p>All-inclusive luxury resort</p>
+                    </div>
+                    <div class="hotel-card">
+                        <h5>Marriott Cancún Resort</h5>
+                        <div class="hotel-distance">0.5 miles from venue</div>
+                        <p>Beachfront with spa facilities</p>
+                    </div>
+                    <div class="hotel-card">
+                        <h5>Airbnb Options</h5>
+                        <div class="hotel-distance">Various locations</div>
+                        <p>Many condos available in Hotel Zone</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="lang-es hidden">
-            <div class="hotel-info">
-                <h3>Alojamiento para Invitados</h3>
-                <p><strong>Emporio Cancún</strong><br />
-                    Blvd. Kukulcán Km 17, Zona Hotelera<br />
-                    Cancún, Quintana Roo 77500, México</p>
-                <p>Código para reservar: LUCAS-BEATRIZ</p>
-
-                <h4>Cómo llegar a Emporio Cancún</h4>
-                <div class="transport-options">
-                    <div class="transport-card">
-                        <h4><i class="fas fa-taxi"></i> Taxi</h4>
-                        <p>Los taxis oficiales del aeropuerto cuestan aproximadamente $50 USD por hasta 4 personas.
-                            Tiempo estimado: 30 minutos.</p>
-                    </div>
-                    <div class="transport-card">
-                        <h4><i class="fas fa-shuttle-van"></i> Transporte del Hotel</h4>
-                        <p>Emporio ofrece traslados privados por $65 USD por trayecto (reserva previa requerida).
-                        </p>
-                    </div>
-                    <div class="transport-card">
-                        <h4><i class="fas fa-car"></i> Renta de Auto</h4>
-                        <p>Agencias de renta disponibles en el aeropuerto. El hotel cuenta con estacionamiento por
-                            $15
-                            USD al día.</p>
-                    </div>
+            <h4>Cómo llegar a Emporio Cancún</h4>
+            <div class="transport-options">
+                <div class="transport-card">
+                    <h4><i class="fas fa-taxi"></i> Taxi</h4>
+                    <p>Los taxis oficiales del aeropuerto cuestan aproximadamente $50 USD por hasta 4 personas.
+                        Tiempo estimado: 30 minutos.</p>
                 </div>
+                <div class="transport-card">
+                    <h4><i class="fas fa-shuttle-van"></i> Transporte del Hotel</h4>
+                    <p>Emporio ofrece traslados privados por $65 USD por trayecto (reserva previa requerida).
+                    </p>
+                </div>
+                <div class="transport-card">
+                    <h4><i class="fas fa-car"></i> Renta de Auto</h4>
+                    <p>Agencias de renta disponibles en el aeropuerto. El hotel cuenta con estacionamiento por
+                        $15
+                        USD al día.</p>
+                </div>
+            </div>
 
-                <div class="nearby-options">
-                    <h4>Otras Opciones Cercanas:</h4>
-                    <div class="hotel-list">
-                        <div class="hotel-card">
-                            <h5>Hyatt Ziva Cancún</h5>
-                            <div class="hotel-distance">A 0.5 km del lugar</div>
-                            <p>Resort de lujo con todo incluido</p>
-                        </div>
-                        <div class="hotel-card">
-                            <h5>Marriott Cancún Resort</h5>
-                            <div class="hotel-distance">A 0.8 km del lugar</div>
-                            <p>Frente a la playa con spa</p>
-                        </div>
-                        <div class="hotel-card">
-                            <h5>Opciones en Airbnb</h5>
-                            <div class="hotel-distance">Varias ubicaciones</div>
-                            <p>Muchos departamentos disponibles en la Zona Hotelera</p>
-                        </div>
+            <div class="nearby-options">
+                <h4>Otras Opciones Cercanas:</h4>
+                <div class="hotel-list">
+                    <div class="hotel-card">
+                        <h5>Hyatt Ziva Cancún</h5>
+                        <div class="hotel-distance">A 0.5 km del lugar</div>
+                        <p>Resort de lujo con todo incluido</p>
+                    </div>
+                    <div class="hotel-card">
+                        <h5>Marriott Cancún Resort</h5>
+                        <div class="hotel-distance">A 0.8 km del lugar</div>
+                        <p>Frente a la playa con spa</p>
+                    </div>
+                    <div class="hotel-card">
+                        <h5>Opciones en Airbnb</h5>
+                        <div class="hotel-distance">Varias ubicaciones</div>
+                        <p>Muchos departamentos disponibles en la Zona Hotelera</p>
                     </div>
                 </div>
             </div>
