--- a/index.html
+++ b/index.html
@@ -354,58 +354,57 @@
     <section id="timeline">
         <!-- English Timeline -->
         <div class="lang-en">
-            <h2>Event Timeline</h2>
-            <div class="timeline">
-                <div class="timeline-day">Wednesday</div>
-                <div class="timeline-item">
-                    <div class="timeline-time">All Day</div>
-                    <div class="timeline-info">Family arrives and settles in</div>
+            <h2 class="timeline-header">Wedding Weekend Schedule</h2>
+            <div class="timeline-elegant">
+                <div class="timeline-event left">
+                    <div class="time">Wednesday</div>
+                    <div class="info">👨‍👩‍👧‍👦 Family arrives and settles in<br><small>If you're in town early, we'd
+                            love to see you — but Wednesday is for family.</small></div>
                 </div>
-                <div class="timeline-day">Thursday</div>
-                <div class="timeline-item">
-                    <div class="timeline-time">Evening</div>
-                    <div class="timeline-info">Guests arrive, family dinner at Navios restaurant</div>
+                <div class="timeline-event right">
+                    <div class="time">Thursday (Sunset)</div>
+                    <div class="info">🍹 Icebreaker at the hotel: drinks, canapés, mingling</div>
                 </div>
-                <div class="timeline-day">Friday</div>
-                <div class="timeline-item">
-                    <div class="timeline-time">7:00 PM</div>
-                    <div class="timeline-info">Icebreaker event at the hotel: drinks, canapés, and mingling</div>
+                <div class="timeline-event left">
+                    <div class="time">Friday</div>
+                    <div class="info">🧘‍♀️ Free day to relax and explore<br><small>Don’t go too hard — Saturday is the
+                            main event!</small></div>
                 </div>
-                <div class="timeline-day">Saturday</div>
-                <div class="timeline-item">
-                    <div class="timeline-time">5:00 PM</div>
-                    <div class="timeline-info">Shuttles leave from Emporio</div>
+                <div class="timeline-event right">
+                    <div class="time">5:00 PM Saturday</div>
+                    <div class="info">🚐 Shuttles depart from Emporio</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">6:00 PM</div>
-                    <div class="timeline-info">Wedding ceremony begins</div>
+                <div class="timeline-event left">
+                    <div class="time">6:00 PM</div>
+                    <div class="info">💍 Wedding Ceremony</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">7:00 PM</div>
-                    <div class="timeline-info">Cocktail hour</div>
+                <div class="timeline-event right">
+                    <div class="time">7:00 PM</div>
+                    <div class="info">🍸 Cocktail Hour</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">8:00 PM</div>
-                    <div class="timeline-info">Dinner and live saxophone music</div>
+                <div class="timeline-event left">
+                    <div class="time">8:00 PM</div>
+                    <div class="info">🍽️ Dinner with 🎷 live saxophone</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">10:00 PM</div>
-                    <div class="timeline-info">Dancing with DJ</div>
+                <div class="timeline-event right">
+                    <div class="time">10:00 PM</div>
+                    <div class="info">💃 DJ and Dancing</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">11:30 PM</div>
-                    <div class="timeline-info">First shuttle returns to the hotel</div>
+                <div class="timeline-event left">
+                    <div class="time">11:30 PM</div>
+                    <div class="info">🚌 First shuttle returns to hotel</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">1:00 AM</div>
-                    <div class="timeline-info">Mariachis and tacos to close the night!</div>
+                <div class="timeline-event right">
+                    <div class="time">1:00 AM</div>
+                    <div class="info">🎺 Mariachis + 🌮 tacos</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">2:00 AM</div>
-                    <div class="timeline-info">Last shuttle to the hotel -- it's a long walk!</div>
+                <div class="timeline-event left">
+                    <div class="time">2:00 AM</div>
+                    <div class="info">🚌 Last shuttle to hotel</div>
                 </div>
             </div>
         </div>
+
         <!-- Spanish Timeline -->
         <div class="lang-es hidden">
             <h2>Programa del Evento</h2>
