include spanish timeline w/ updates

--- a/index.html
+++ b/index.html
@@ -407,58 +407,67 @@
 
         <!-- Spanish Timeline -->
         <div class="lang-es hidden">
-            <h2>Programa del Evento</h2>
-            <div class="timeline">
-                <div class="timeline-day">Miércoles</div>
-                <div class="timeline-item">
-                    <div class="timeline-time">Todo el día</div>
-                    <div class="timeline-info">La familia llega y se instala</div>
+            <h2 class="timeline-header">Programa del Fin de Semana</h2>
+            <div class="timeline-elegant">
+                <div class="timeline-event left">
+                    <div class="time">Miércoles</div>
+                    <div class="info">👨‍👩‍👧‍👦 La familia llega y se instala<br><small>Si ya estás en Cancún, ¡nos
+                            encantaría verte! Pero este día es exclusivo para la familia.</small></div>
                 </div>
-                <div class="timeline-day">Jueves</div>
-                <div class="timeline-item">
-                    <div class="timeline-time">Tarde</div>
-                    <div class="timeline-info">Llegan los invitados, cena familiar en el restaurante Navios</div>
+
+                <div class="timeline-event right">
+                    <div class="time">Jueves (al atardecer)</div>
+                    <div class="info">🍹 Evento rompehielo en el hotel: bebidas, canapés y convivencia</div>
                 </div>
-                <div class="timeline-day">Viernes</div>
-                <div class="timeline-item">
-                    <div class="timeline-time">7:00 PM</div>
-                    <div class="timeline-info">Evento de bienvenida en el hotel: bebidas, canapés y convivencia</div>
+
+                <div class="timeline-event left">
+                    <div class="time">Viernes</div>
+                    <div class="info">🧘‍♀️ Día libre para descansar o explorar<br><small>¡Pero no se excedan! El sábado
+                            se baila fuerte.</small></div>
                 </div>
-                <div class="timeline-day">Sábado</div>
-                <div class="timeline-item">
-                    <div class="timeline-time">5:00 PM</div>
-                    <div class="timeline-info">El transporte saldrá de Emporio</div>
+
+                <div class="timeline-event right">
+                    <div class="time">Sábado, 5:00 PM</div>
+                    <div class="info">🚐 El transporte saldrá desde el Emporio</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">6:00 PM</div>
-                    <div class="timeline-info">Comienza la ceremonia</div>
+
+                <div class="timeline-event left">
+                    <div class="time">6:00 PM</div>
+                    <div class="info">💍 Comienza la ceremonia</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">7:00 PM</div>
-                    <div class="timeline-info">Hora del cóctel</div>
+
+                <div class="timeline-event right">
+                    <div class="time">7:00 PM</div>
+                    <div class="info">🍸 Hora del cóctel</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">8:00 PM</div>
-                    <div class="timeline-info">Cena con música de saxofón en vivo</div>
+
+                <div class="timeline-event left">
+                    <div class="time">8:00 PM</div>
+                    <div class="info">🍽️ Cena con música de 🎷 saxofón en vivo</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">10:00 PM</div>
-                    <div class="timeline-info">Baile con DJ</div>
+
+                <div class="timeline-event right">
+                    <div class="time">10:00 PM</div>
+                    <div class="info">💃 Baile con DJ</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">11:30 PM</div>
-                    <div class="timeline-info">El primer transporte saldrá de regreso al hotel</div>
+
+                <div class="timeline-event left">
+                    <div class="time">11:30 PM</div>
+                    <div class="info">🚌 Primer transporte de regreso al hotel</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">1:00 AM</div>
-                    <div class="timeline-info">¡Mariachis y tacos para cerrar la noche!</div>
+
+                <div class="timeline-event right">
+                    <div class="time">1:00 AM</div>
+                    <div class="info">🎺 Mariachis y 🌮 tacos para cerrar la noche</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-time">2:00 AM</div>
-                    <div class="timeline-info">El transporte saldrá de regreso al hotel</div>
+
+                <div class="timeline-event left">
+                    <div class="time">2:00 AM</div>
+                    <div class="info">🚌 Último transporte al hotel</div>
                 </div>
             </div>
         </div>
+
     </section>
     <div class="leaf-divider alt"></div>
     <!-- Existing timeline content -->
